styles/item-page.module.css
.table {
  @apply bg-white border border-grey-100 p-2 divide-y divide-grey-75 table-fixed w-full lg:border-none lg:my-2;
}

.th-value {
  @apply text-sm font-light text-left py-3 lg:py-0 lg:text-base;
}

.th-name {
  @apply th-value px-3.5;
}

.th-value-c {
  @apply text-sm font-light text-left py-3 lg:py-5 lg:text-base;
}

.th-name-c {
  @apply th-value-c px-3.5;
}

.tr-c:nth-child(even) {
  background-color: #f5f5f5;
}

.photo-slide {
  @apply mx-auto relative bg-white border h-52 border-grey-100 lg:w-16 lg:h-16 lg:border-none;
}

